# docgenerator

./: .gitignore  Cargo.toml
src/: csv_parser.rs  docx_processor.rs  main.rs  pdf_converter.rs  pdf_generator.rs
