[package]
name = "docgenerator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
lopdf = "0.36.0"
printpdf = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
xml-rs = "0.8.26"
zip = "4.1.0"

# [profile.release]
# opt-level = "s"
# lto = true
# codegen-units = 1
# strip = true
