[package]
name = "docgenerator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
# lopdf = "0.34"
pdf-writer = "0.11"
# printpdf = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
# tempfile = "3.20.0"
xml-rs = "0.8"
zip = "2.1"

# [profile.release]
# opt-level = "s"
# lto = true
# codegen-units = 1
# strip = true
