[package]
name = "docgenerator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
xml-rs = "0.8"
zip = {version="2.1", default-features=false, features=["deflate"]}

# [profile.release]
# opt-level = "s"
# lto = true
# codegen-units = 1
# strip = true
